<resources>
    <string name="app_name">Safetips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Quizz</string>
    <string name="safetips">SafeTips</string>
    <string name="during_an_emergency_situation_remember_these_three_essential_steps_secure_the_place_ensure_safety_by_preventing_further_incidents_or_harm_it_may_includes_shutting_off_power_sources_or_evacuating_the_area_alert_authorities_call_the_appropriate_emergency_phone_number_to_inform_and_seek_professional_assistance_provide_your_name_your_location_and_a_detailed_description_of_what_is_happening_act_responsibly_follow_emergency_protocols_provide_aid_if_possible_or_evacuate_calmly">During an emergency situation, remember these three essential steps: Secure the Place: Ensure safety by preventing further incidents or harm. It may includes shutting off power sources or evacuating the area Alert Authorities: Call the appropriate emergency phone number to inform and seek professional assistance. Provide your name your location and a detailed description of what is happening. Act Responsibly: Follow emergency protocols, provide aid if possible, or evacuate calmly.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secure_section_content_unconsciouss">Assess the environment for any immediate danger. Look out for traffics, fire or falling objects. Before Alerting the emergency services ensure that you\'re safe</string>
    <string name="alert_section_content_unconsciouss">Dial the number of the emergency services which is the 112, communicate your name and your location follow their instruction and Do not hang up until they ask you to.  </string>
    <string name="act_section_content_unconsciouss">First, loosen the victim\'s collar, belt, or tie. Place one hand on the victim\'s forehead and gently tilt their head. At the same time,position the fingertips of your other hand under the tip of the victim\'s chin and lift it to free the tongue from the back of the throat and clear the airway. Do not apply pressure to the soft area under the chin to avoid obstructing breathing.Check the victim\'s breathing: \nEnsure that the chest rises and falls regularly. \nListen for breathing sounds by bringing your ear close to their mouth.\nAttempt to feel their breath by placing your cheek near their mouth for 10 seconds. </string>
    <string name="unc_act_1">1. loosen the victim\'s collar, belt, or tie.</string>
    <string name="unc_act2">2. Place one hand on the victim\'s forehead and gently tilt their head. At the same time, position the fingertips of your other hand under the tip of the victim\'s chin and lift it to free the tongue from the back of the throat and clear the airway.</string>
    <string name="unc_act3">3. Check the victim\'s breathing:\n\n   a. Ensure that the chest rises and falls regularly.\n\n   b. Listen for breathing sounds by bringing your ear close to their mouth.\n\n   c. Attempt to feel their breath by placing your cheek near their mouth for 10 seconds.</string>
    <string name="unc_act4">4. If the victim is breathing, place the person on the side in the recovery position</string>
    <string name="unc_act5">5. If the person is not breathing perform cardiac massage by following the next steps</string>
    <string name="unc_act5_1">5.1 Place the heel of one hand on the center of the person\'s chest, between the nipples.</string>
    <string name="unc_act5_2">5.2 Place your other hand on top of the first hand, interlocking your fingers.</string>
    <string name="unc_act5_3">5.3 Position yourself directly above the person\'s chest, with your shoulders aligned vertically above your hands.</string>
    <string name="unc_act5_4">5.4 Push hard and fast, using your body weight, to compress the chest at least 2 inches (5 centimeters) deep.</string>
    <string name="unc_act5_5">5.6 Allow the chest to fully recoil between compressions.</string>
    <string name="unc_act5_6">5.7 Perform chest compressions at a rate of 100 to 120 compressions per minute. (aim for 2 per second)</string>
    <string name="unc_act5_7">5.8 Continue performing uninterrupted chest compressions until help arrives or until an automated external defibrillator (AED) is available.</string>
    <string name="unc_act5_8">5.9 If an AED is nearby, follow its instructions for use..</string>
    <string name="injury_alert">Dial the emergency number: the 112, provide your name, location and the extent of the bleeding.</string>
    <string name="injury_act1">1. Determine the severity of the bleeding, if it severe and spurting out or the blood does not stop flowing it may indicate arterial bleeding which requires immediate attention.</string>
    <string name="injury_act2">2. Protect yourself: if possible put on gloves or any kind of clean cloth to avoid direct blood contact.</string>
    <string name="injury_act3">3. If there is NO objects piercing the victim, apply pressure on the wound using cloth (you can use your shirt) do not release the pressure until help arrives.</string>
    <string name="injury_4">4. If there is an object piercing the victim, do NOT try to remove the object and perform apply pressure until help arrives with cloth</string>
    <string name="choking_alert">In the context of choking immediate assistance is required, ask someone to call 112  while you\'re acting on the victim. If there is nobody call the number put your phones down and uses the speaker.</string>
    <string name="choking_act1">1. Stand behind the person and tilt them forward, then deliver up to five slaps on their back. After each slap, check if the object has been expelled.</string>
    <string name="choking_act2">2. If the slaps did not work perform abdominal thrust (Heilmlich maneuver) follow the steps bellow:</string>
    <string name="choking_act3">3. If the maneuver did not work alternate between 5 slaps and 5 thrust.</string>
    <string name="choking_act4">4. If the victim lose consciousness perform cardiac massage by following theses steps:</string>
    <string name="assault_secure">Ensure personal safety: If you witness an assault, first ensure your own safety. If the situation is dangerous or you feel at risk, distance yourself and seek a safe place. Avoid intervening directly if it puts you in harm\'s way.</string>
    <string name="assault_alert">Dial emergency services immediately at 112 to report the assault. Provide the operator with accurate information about the location, description of the assailant(s), and any other relevant details.</string>
    <string name="assault_act1">1. Preserve evidence: If possible, try to preserve any evidence related to the assault. Avoid touching or disturbing the area where the incident took place, as it may contain valuable evidence for law enforcement.</string>
    <string name="assault_act2">2. Provide assistance if safe: If the immediate danger has passed and it is safe to do so, offer help to the victim if they require medical attention or support. Be mindful of your own limitations and do not provide medical assistance beyond your abilities.</string>
    <string name="assault_act3">3. Encourage reporting: If the victim is willing, support and encourage them to report the assault to the police. Offer to accompany them or assist in finding the appropriate resources for reporting.</string>
    <string name="assault_act4">4.Document details: If you witnessed the assault, make a note of important details, such as the date, time, location, description of the assailant(s), and any other relevant information. This information may be helpful for law enforcement investigations.</string>
    <string name="terrorist_secure">Run, if possible: If you can safely escape the immediate vicinity of the attack, quickly move away from the danger. Encourage others to do the same but avoid causing panic. If running is not possible hide, seek a shelter in a secure place, barricade if it possible turn off lights and any sources of noises stay quiet and out of sight</string>
    <string name="terrorist_alert">Alert authorities: Dial emergency services immediately at 112 to report the attack. Provide them with precise information about the location, nature of the incident, and any details that may help responders.</string>
    <string name="terorist_a1">1. Stay calm and quiet: It is important to remain calm and avoid drawing attention to yourself. Turn off ringers or vibrations on electronic devices and maintain silence to avoid detection.</string>
    <string name="terrorist_a2">2. Follow instructions: If there are official instructions or announcements, follow them carefully. Authorities may provide guidance or evacuation protocols to ensure your safety</string>
    <string name="terrorist_a3">3. Help others if safe: If it is safe to do so, assist others who may be injured or in distress. Provide basic first aid if you have the knowledge and resources to do so without putting yourself at risk.</string>
    <string name="terrorist_a4">4. Do not share unverified information: Avoid spreading rumors or unverified information about the incident. Rely on official sources for accurate updates.</string>
    <string name="electrical_secure">Cut off the power source: If there is an immediate electrical hazard, such as a live wire or exposed electrical components, turn off the power source. Locate the main circuit breaker or fuse box and switch off the circuit breaker or remove the fuse that controls the affected area. This will help minimize the risk of electric shock or fire.</string>
    <string name="electrical_alert">Call emergency services: Dial the emergency services number in Luxembourg, which is 112, to report the domestic incident involving electricity. Provide accurate information about the situation and the location.</string>
    <string name="electrical_act1">1. Avoid contact with live electrical components: Do not touch any electrical equipment or wiring if you suspect they are live or damaged. Keep a safe distance and prevent others from approaching the hazardous area.</string>
    <string name="electrical_act2">2. Evacuate if necessary: If the domestic incident poses a significant threat, such as a fire or structural damage, evacuate the premises immediately. Alert other occupants and follow established evacuation procedures, if available.</string>
    <string name="fire_alert">Call emergency services: Once you are safely outside, call emergency services immediately at 112 to report the fire. Provide accurate information about the location, size, and nature of the fire. Alert others by screaming \'fire!\'</string>
    <string name="fire_secure">Evacuate the area: Leave the building or area where the fire is occurring as quickly and calmly as possible. Do not use elevators. Follow designated escape routes and emergency exit signs, if available</string>
    <string name="fire_act1">1. Stay low: If there is smoke, stay close to the ground where the air is less toxic and easier to breathe. Crawl if necessary, keeping your head as low as possible to avoid inhaling smoke.</string>
    <string name="fire_act2">2. Check doors for heat: Before opening a door, check its temperature with the back of your hand. If the door is hot, do not open it as it may indicate fire on the other side. Seek an alternative exit</string>
    <string name="fire_act3">3. Close doors behind you: As you exit, close doors behind you to help slow down the spread of fire and smoke.</string>
</resources>